compilateurDeca/src/test/deca/context/invalid/sans_objet/operation/greater_bool.deca
// Description:
//    Sans-Objet
//    Comparaison
//    Inégalité sur booléens :
//
// Resultats:
//    Ligne 14: 
//    les opérateurs <, >, <=, >= ne s'appliquent qu'aux types numériques 
// 
// Historique:
//    cree le 11/01/2026

{
    boolean b = (true > false);
}